Adicionado Guga de instalação e manual de funcionalidades no readme.md